k8s/content-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: content-service
  template:
    metadata:
      labels:
        app: content-service
    spec:
      containers:
        - name: content-service
          image: melidob/content-service:latest
          ports:
            - containerPort: 3002
