k8s/interaction-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interaction-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: interaction-service
  template:
    metadata:
      labels:
        app: interaction-service
    spec:
      containers:
        - name: interaction-service
          image: melidob/interaction-service:latest
          ports:
            - containerPort: 3003
