k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 3001       # The port used inside the cluster
      targetPort: 3001 # The port your container is listening on
  type: ClusterIP
